--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple Calculators – Free Online Calculator Tools</title>
-  <meta name="description" content="Simple Calculators offers free, easy-to-use calculators for salary, freelance rates, rent splitting, and budgeting. No signup required.">
+  <title>Simple Calculators</title>
+  <meta name="description" content="Free, easy-to-use calculators for salary, freelance rates, rent, budgets, and more.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <nav class="nav">
+  <div class="nav-container">
+    <a href="index.html" class="logo">Simple Calculators</a>
+   <div class="nav-links">
+  <a href="salary-to-hourly.html">Salary</a>
+  <a href="freelance-rate.html">Freelance</a>
+  <a href="rent-split.html">Rent</a>
+  <a href="budget-calculator.html">Budget</a>
+  <a href="basic-calculator.html">Basic</a>
+</div>
+  </div>
+</nav>
+
 
   <header class="site-header">
     <h1>Simple Calculators</h1>
@@ -40,7 +53,12 @@
           <h3>Budget Calculator</h3>
           <p>Plan your monthly budget and savings.</p>
         </a>
-      </div>
+
+          <a class="card" href="basic-calculator.html">
+  <h3>Basic Calculator</h3>
+  <p>Add, subtract, multiply, and divide numbers.</p>
+</a>
+     </div>
     </section>
 
   </main>
