--- a/budget-calculator.html
+++ b/budget-calculator.html
@@ -5,7 +5,7 @@
   <title>Budget Calculator | Simple Calculators</title>
   <meta name="description" content="Plan your monthly budget and calculate how much you can save.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="/simple-calculators/css/style.css">
 </head>
 <body>
 
