--- a/freelance-rate.html
+++ b/freelance-rate.html
@@ -6,7 +6,7 @@
   <title>Freelance Rate Calculator | Simple Calculators</title>
   <meta name="description" content="Calculate your ideal freelance hourly rate based on income goals and billable hours.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/simple-calculators/css/style.css">
 </head>
 <body>
 
