--- a/salary-to-hourly.html
+++ b/salary-to-hourly.html
@@ -5,7 +5,7 @@
   <title>Salary to Hourly Calculator | Simple Calculators</title>
   <meta name="description" content="Convert your annual salary into hourly pay with taxes and PTO taken into account.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/simple-calculators/css/style.css">
 </head>
 <body>
 
