--- a/basic-calculator.html
+++ b/basic-calculator.html
@@ -5,7 +5,7 @@
   <title>Basic Calculator | Simple Calculators</title>
   <meta name="description" content="Quick basic calculator for addition, subtraction, multiplication, and division.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/simple-calculators/css/style.css">
 </head>
 <body>
 
