--- a/rent-split.html
+++ b/rent-split.html
@@ -5,7 +5,7 @@
   <title>Rent Split Calculator | Simple Calculators</title>
   <meta name="description" content="Split rent fairly between roommates with this simple calculator.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/simple-calculators/css/style.css">
 </head>
 <body>
 
