--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Simple Calculators</title>
   <meta name="description" content="Free, easy-to-use calculators for salary, freelance rates, rent, budgets, and more.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="/simple-calculators/css/style.css">
 </head>
 <body>
 
